--- a/templates/about.html
+++ b/templates/about.html
@@ -1,1 +1,14 @@
 <!-- About Page -->
+<!DOCTYPE html>
+<html>
+<head>
+    {% if title %}
+        <title>Flask Blog - {{ title }}</title>
+    {% else %} 
+        <title>Flask Blog</title>
+    {% endif %}  
+</head>
+<body>
+    <h1>About Page</h1>
+</body>
+</html>
