--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,19 @@
 <!-- Home Page -->
+<!DOCTYPE html>
+<html>
+<head>
+    {% if title %}
+        <title>Flask Blog - {{ title }}</title>
+    {% else %} 
+        <title>Flask Blog</title>
+    {% endif %} 
+</head>
+<body>
+    <h1>Home Page</h1>
+    {% for post in posts %}
+        <h2>{{ post.title }}</h2>
+        <p> By {{ post.author }} on {{ post.date_posted }} </p>
+        <p> {{ post.concent }} </p>
+    {% endfor %}
+</body>
+</html>
